@@ -1,3 +1,8 @@
+2000-01-22  Peter Teichman  <peter@helixcode.com>
+
+	* gnome-pilot.m4 (PILOT_LIBS): fix the version-checking macro for
+	debian
+
 2000-01-20  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* gnome-objc-checks.m4: Look for sched_yield in -lrt, too.
